// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders properly 1`] = `
.c0 {
  margin-bottom: 50px;
}

.c1 {
  line-height: 1.5;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid;
  outline: none;
}

<body>
  <div>
    <footer
      class="c0"
    >
      <span
        class="c1"
      >
        CC-BY 
        2020
        , 
        built with
         
      </span>
      <a
        class="c2"
        href="https://gatsbyjs.org"
        rel="noopener"
        target="_blank"
      >
        gatsby
      </a>
    </footer>
  </div>
</body>
`;

exports[`<Footer /> renders the sourceCode url if defined 1`] = `
.c0 {
  margin-bottom: 50px;
}

.c1 {
  line-height: 1.5;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid;
  outline: none;
}

<body>
  <div>
    <footer
      class="c0"
    >
      <span
        class="c1"
      >
        CC-BY 
        2020
        , 
        built with
         
      </span>
      <a
        class="c2"
        href="https://gatsbyjs.org"
        rel="noopener"
        target="_blank"
      >
        gatsby
      </a>
      <span
        class="c1"
      >
         • 
      </span>
      <a
        class="c2"
        href="https://github.com/diegocoxta/diegocosta.me"
        rel="noopener"
        target="_blank"
      >
        source code
      </a>
    </footer>
  </div>
</body>
`;
